workflows/wftest/fastapi/server.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: fastapi-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: fastapi-server
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: fastapi-server
        version: v1.0.3
    spec:
      containers:
      - name: fastapi-server
        image: python:workflow-0.4.0
        imagePullPolicy: IfNotPresent
        command:
        - python
        args: 
        - '/code/fastapitest.py'
        volumeMounts:
        - name: test-volume
          mountPath: /code
        ports:
          - containerPort: 5050
            name: http
      volumes:
      - name: test-volume
        hostPath:
          path: /root/argo
          type: Directory
      nodeSelector:
        kubernetes.io/hostname: trtis-worker-2

  strategy:
    canary:
      canaryService: fastapi-server-canary
      stableService: fastapi-server-stable
      analysis:
        startingStep: 1
        templates:
        - templateName: istio-success-rate
        args:
        - name: service
          value: canary
        - name: namespace
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
      trafficRouting:
        istio:
          virtualService:
            name: istio-rollout-vsvc
            routes:
            - fastapi-server
      steps:
      - setWeight: 10
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
