workflows/wftest/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-server-service
spec:
  type: NodePort
  ports:
  - port: 5050
    targetPort: http
    nodePort: 32323
    protocol: TCP
    name: http
  selector:
    app: fastapi-server
