workflows/wftest/fastapi/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - istio-rollout.apps.argoproj.io
  - istio-rollout.local
  http:
  - name: fastapi-server
    route:
    - destination:
        host: fastapi-server-stable
      weight: 100
    - destination:
        host: fastapi-server-canary
      weight: 0
